# m2store

./: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac  go.mod  go.sum  s2cli.go  s2pwd.go  s2srv.go
client/: client.go
config/: config.go.in
front/: babel.config.js  package-lock.json  package.json
front/src/: Buckets.jsx  Files.jsx  Login.jsx  Login.jsx.orig  Menu.jsx  Pager.jsx  main.jsx  patch-x-Login.jsx
public/: bundle.c3ca1bb7c4ca.js  index.html
server/: server.go
server/bucket-controller/: bucket_controller.go
server/file-controller/: file_controller.go
server/status-controller/: status_controller.go
server/store-controller/: store_controller.go
server/user-controller/: user_controller.go
